@@ -1,43 +1,45 @@
-lib_LTLIBRARIES= libMonoPosixHelper.la libsupportw.la
+lib_LTLIBRARIES = 				\
+	libMonoPosixHelper.la			\
+	libMonoWindowsSupport.la
 
-INCLUDES = \
-	$(GLIB_CFLAGS) \
+INCLUDES =					\
+	$(GLIB_CFLAGS)				\
 	-I$(top_srcdir)
 
 # Source code which helps implement the ANSI C standards, and thus *should* be
 # portable to any platform having a C compiler.
-MPH_C_SOURCE =   \
-	errno.c 	     \
-	map.c          \
-	map.h          \
-	mph.h          \
-	signal.c       \
-	stdio.c        \
-	stdlib.c		\
+MPH_C_SOURCE =					\
+	errno.c					\
+	map.c					\
+	map.h					\
+	mph.h					\
+	signal.c				\
+	stdio.c					\
+	stdlib.c				\
 	map-icalls.h
 
 # Source code which helps implement POSIX and other related Unix standards,
 # and *may* be portable between Unix platforms.
-MPH_UNIX_SOURCE = \
-	dirent.c 	\
-	fcntl.c 	\
-	fstab.c   \
-	grp.c 		\
-	macros.c	\
-	old-map.c 	\
-	old-map.h 	\
-	pwd.c 		\
-	serial.c	\
-	sys-mman.c 	\
-	sys-sendfile.c 	\
-	sys-stat.c 	\
-	sys-statvfs.c 	\
-	sys-time.c 	\
-	sys-wait.c 	\
-	sys-xattr.c	\
-	time.c 		\
-	unistd.c	 \
-	utime.c    \
+MPH_UNIX_SOURCE =				\
+	dirent.c				\
+	fcntl.c					\
+	fstab.c					\
+	grp.c					\
+	macros.c				\
+	old-map.c				\
+	old-map.h				\
+	pwd.c					\
+	serial.c				\
+	sys-mman.c				\
+	sys-sendfile.c				\
+	sys-stat.c				\
+	sys-statvfs.c				\
+	sys-time.c				\
+	sys-wait.c				\
+	sys-xattr.c				\
+	time.c					\
+	unistd.c				\
+	utime.c					\
 	x-struct-str.c
 
 if PLATFORM_WIN32
@@ -49,32 +51,31 @@ MPH_LIBS   = $(GLIB_LIBS)
 endif
 
 if HAVE_ZLIB
-Z_SOURCE = \
-	zlib_macros.c
-Z_LIBS   = \
-	-lz
+Z_SOURCE = zlib_macros.c
+Z_LIBS   = -lz
 else
 Z_SOURCE = 
 Z_LIBS   = 
 endif
 
-libMonoPosixHelper_la_SOURCES = \
-	$(MPH_SOURCE) \
+libMonoPosixHelper_la_SOURCES =			\
+	$(MPH_SOURCE)				\
 	$(Z_SOURCE)
 
-libMonoPosixHelper_la_LIBADD = \
-	$(MPH_LIBS) \
+libMonoPosixHelper_la_LIBADD =			\
+	$(MPH_LIBS)				\
 	$(Z_LIBS)
 
 # libMonoPosixHelper_la_LDFLAGS = -no-undefined -version-info 1:0:1
 libMonoPosixHelper_la_LDFLAGS = -no-undefined -avoid-version
+libMonoWindowsSupport_la_LDFLAGS = -no-undefined -avoid-version
 
-libsupportw_la_SOURCES = \
-		supportw.c \
+libMonoWindowsSupport_la_SOURCES =		\
+		supportw.c			\
 		supportw.h
 
-libsupportw_la_LIBADD = \
-		$(top_builddir)/mono/io-layer/libwapi.la \
+libMonoWindowsSupport_la_LIBADD =				\
+		$(top_builddir)/mono/io-layer/libwapi.la	\
 		$(top_builddir)/mono/mini/libmono.la
 
 # 
